Fixed some typos

--- a/DippaLatex.tex
+++ b/DippaLatex.tex
@@ -223,7 +223,7 @@ TODO
  
  \begin{itemize}
  
- \item ECO: pretest & tests
+ \item ECO: pretest and tests
  
  \item ECO: Chapter 3 preventing defects 
  
@@ -274,7 +274,7 @@ TODO
  \item Ei turhia raportteja
  \item ECO: Cost per defect => paras tulos bugisimmassa projektissa
  
- \end{itemize]
+ \end{itemize}
  
  \chapter{Case: Päikky}
  
