--- a/DippaLatex.tex
+++ b/DippaLatex.tex
@@ -6,6 +6,8 @@
  
 % Vaatii lisäksi luokkatiedoston tutthesis.cls
 % sekä tiedoston tty-logo.pdf (pdflatex) tai tty-logo-eps (latex)
+
+% Muutos
  
 \usepackage[utf8]{inputenc}
 
