--- a/DippaLatex.tex
+++ b/DippaLatex.tex
@@ -150,6 +150,8 @@ olla joko \textit{.eps}- tai \textit{.pdf}-muodossa riippuen \LaTeX-versiosta.
  
  \chapter{Quality Assurance in Futurice}
  
+TODO
+
  \chapter{Startup}
  
  \section{Budget}
@@ -202,7 +204,7 @@ olla joko \textit{.eps}- tai \textit{.pdf}-muodossa riippuen \LaTeX-versiosta.
  \item ECO: Shortens development schedules, Lowers development costs, Lowers maintenance costs, Reduces warranty costs, Increases customer satisfaction
  \item ECO: Chapter 1, software has become..
  
- \end{itemize
+ \end{itemize}
  
  \item Qualityn määritelmä
 
