--- a/DippaLatex.tex
+++ b/DippaLatex.tex
@@ -7,7 +7,7 @@
 % Vaatii lisäksi luokkatiedoston tutthesis.cls
 % sekä tiedoston tty-logo.pdf (pdflatex) tai tty-logo-eps (latex)
 
-% Muutos
+% Toinen muutos
  
 \usepackage[utf8]{inputenc}
 
