--- a/DippaLatex.tex
+++ b/DippaLatex.tex
@@ -261,7 +261,7 @@ olla joko \textit{.eps}- tai \textit{.pdf}-muodossa riippuen \LaTeX-versiosta.
  
  \subsection{Point of diminishing returns}
  
- \subsection{The Don'ts}
+ \subsection{The Don'ts - Things to avoid}
  
  \begin{itemize}
  
