--- a/case/c_case.tex
+++ b/case/c_case.tex
@@ -1,25 +1,8 @@
 
  \chapter{Case: Päikky}
  
- \section{Quality Assurance in Futurice}
+\input{case/s_qa_futurice}
 
- \section{Project objectives}
+\input{case/s_objectives}
 
- \section{QA methods and processes used}
- 
- \begin{itemize}
- 
- \item Käytetyt QA-metodit
- \item Kerrotaan prosessista ja tiimistä
- 
- \end{itemize}
- 
- \section{Achieved quality in the project}
-
- \begin{itemize}
- 
- \item Kartoitetaan bugit (Mailit, Pivotal, Repo)  
- \item Asiakkaan ja loppukäyttäjien tyytyväisyys
- 
- \end{itemize}
- 
+\input{case/s_methods_processes}
