--- a/quality/s_quality_methods.tex
+++ b/quality/s_quality_methods.tex
@@ -10,6 +10,8 @@
  \item ROI: Three main activities: Review, process audit and testing
  
  \end{itemize}
+
+JAKO AKTIIVISET/PASSIIVISET??
  
 \input{quality/ss_testing}
 
