--- a/general/c_references.tex
+++ b/general/c_references.tex
@@ -1,19 +1,8 @@
 
 % lähdeluettelo
-\newpage
-\addcontentsline{toc}{chapter}{References} % Lisää tämäkin sisällysluetteloon
-\renewcommand{\bibname}{References} 
-\begin{thebibliography}{99}
-\bibitem{Hirs} Hirsjärvi, S., Remes, P., ja Sajavaara, P. 2005. Tutki ja
-  kirjoita, 11. painos. Helsinki, Tammi. 436 s. 
-\bibitem{Mittelbach} Mittelbach, F., Goossens, M., Braams, J., 
-Carlisle, D., Rowley, C. 2004. The Latex Companion, 2. painos. Boston, Addison-Wesley. 1120 s.
- 
-\end{thebibliography}
- 
-% seuraavia voi käyttää bibtex:n kanssa (edellyttää tiedoston kirjat.bib)
-%\bibliographystyle{plain}
-%\bibliography{kirjat}
+% seuraavia voi käyttää bibtex:n kanssa (edellyttää tiedoston books.bib)
+\bibliographystyle{plain}
+\bibliography{books}
  
 %\appendix
 %\renewcommand{\chaptername}{Liite}
