Added descriptions of quality in general

--- a/quality/s_quality_general.tex
+++ b/quality/s_quality_general.tex
@@ -4,11 +4,20 @@
 
 Quality is an attribute of the item in question. It is often described as a combination of qualitative and quantitative attributes. Quality is an ambiguous attribute, because it is subjective and thus differs when viewed from different perspectives. American Society for Quality has two definitions for technical quality: 1. the products ability to satisfy its needs; 2. the products lack of deficiencies~\cite{ASQglossary}
 
-% Subjektiivista
-In software business, quality has also multiple viewpoints. Quality has different meanings for vendors, customers, end-users etc. 
-
 % ECO: Chapter 1
+Besides being subjective, the word "quality" has many tones and thus it complicates defining quality and especially software quality. The word "quality" can describe affairs such as elegance or beauty, fitness of use, satisfaction of user requirements, freedom from defects, high reliability and ease of use among multiple others. These descriptions appear even more complicated considering that quality and the it's attributes are bound to not just the observer but also the operation context in question. While a software component can have excellent quality in some context it can still be even dangerous in other. The same applies in several attributes of quality. A component fit for some use can be defective in different context; what is satisfying the users requirements in one environment can be useless in others.~\cite{jones2011economics}
+
+% Softabisneksessäkin Subjektiivista
+TODO: In software business, quality has also multiple viewpoints. Quality has different meanings for vendors, customers, end-users etc. 
+
+
+
+% http://ryreitsma.blogspot.fi/2011/07/software-has-new-quality-model-iso.html
+% Virallinen, ISO 25010: Functional suitability, Reliability, Operability, Performance efficiency, Security, Compatibility, Maintainability, Transferability
+TODO: Voiko viitata blogiin, jossa kiteytetään ISO 25010
  
+
+
 % Haikala s.48: toiminnan laatu vs tuotteen laatu
 
 % Haikala s.49 verification/validation 'tehdäänkö tuotetta oikein' ja 'tehdäänkö oikeaa tuotetta'
@@ -23,18 +32,18 @@ In software business, quality has also multiple viewpoints. Quality has differen
 \subsection{Motivation}
 
 % \ Chapter 1, software has become..
-Software is one of the most used type of product in human history. At the same time it has one of the highest failure rates of any type of product mainly due to poor quality. With those facts, it is clear that the total influence of low quality software is considerable in both money and time. Still it is a known fact that a common practise to cut costs is reducing the effort used in software quality. Convincing the payer to allow using effort to achieve good quality can be difficult but crucial. The topic is widely researched and the results speak in behalf of quality.
+Software is one of the most used type of product in human history. At the same time it has one of the highest failure rates of any type of product mainly due to poor quality. With those facts, it is clear that the total influence of low quality software is considerable in both money and time. Still it is a known fact that a common practice to cut costs is reducing the effort used in software quality. Convincing the payer to allow using effort to achieve good quality can be difficult but crucial. The topic is widely researched and the results speak in behalf of quality.
 
-Phil Crosby has made popular a concept that establishing a quality program will return in savings more than the program costs and thus "quality is free" [VIITE Quality is free]. Even though Crosbys concept is used mainly in manufacturing sector, it has some truth that can apply to software business.  In addition, the "cost of quality" is a slightly inappropriate term, >considering that quality in itself doesn't create costs but the lack of it. 
+Phil Crosby has made popular a concept that establishing a quality program will return in savings more than the program costs and thus "quality is free" [VIITE Quality is free]. Even though Crosby's concept is used mainly in manufacturing sector, it has some truth that can apply to software business.  In addition, the "cost of quality" is a slightly inappropriate term, >considering that quality in itself doesn't create costs but the lack of it. 
 
 %\ Cancellation 31\% for 10000 function point projects. Costs 35M\$ vs high quality 20m\$
-Studies have shown that software quality has huge impact on project costs and success. Measurements on 10000 function point projects show that about 31\% of projects that size come to an end by cancellation. The average cost of these cancelled projects is about \$35,000,000. Succesfull projects the same size with good quality have about 40\% lower costs. These figures endorse the effort put to the software quality and make it clear that at least in large scale projects, quality control shouldn't be ignored.
+Studies have shown that software quality has huge impact on project costs and success. Measurements on 10000 function point projects show that about 31\% of projects that size come to an end by cancellation. The average cost of these canceled projects is about \$35,000,000. Successful projects the same size with good quality have about 40\% lower costs. These figures endorse the effort put to the software quality and make it clear that at least in large scale projects, quality control shouldn't be ignored.
 
 % ECO: page 19 Reduces the odds of large-system cancellations, Shortens development schedules, Lowers development costs, Lowers maintenance costs, Reduces warranty costs, Increases customer satisfaction
-Capers Jones has listed several points that make high quality a major enocomic benefit. In the development of large systems, high quality from the beginning can reduce the propability of cancellations. Software projects can also benefit by achieving shorter development schedules. Shorter schedules with high quality also lowers the costs of a project. Lower development costs, maintenance costs and warranty costs can add up to considerable amounts of cost savings. In addition to the quantitative benefits, high quality raises the satisfaction of customers, end-users and developers. 
+Capers Jones has listed several points that make high quality a major economic benefit. In the development of large systems, high quality from the beginning can reduce the probability of cancellations. Software projects can also benefit by achieving shorter development schedules. Shorter schedules with high quality also lowers the costs of a project. Lower development costs, maintenance costs and warranty costs can add up to considerable amounts of cost savings. In addition to the quantitative benefits, high quality raises the satisfaction of customers, end-users and developers. 
 
 % ECO: it is gratifying to observe that high quality levels are invariably associated with shorter-than-average development schedules and lower-than-average development costs
-Jones expresses concerns towards the poor measurement of software quality causing executives and even quality personnel to treat software quality as an expense. Those participants may also treat quality as an issue that is raising the development costs and increasing development schedules. As an equivalent, Jones summarizes the benefits of high quality: "However, from an analysis of about 13,000 software projects between 1973 and today, it is gratifying to observe that high quality levels are invariably associated with shorter-than-average development schedules and lower-than-average development costs"~\cite{jones2011economics}
+Jones expresses concerns towards the poor measurement of software quality causing executives and even quality personnel to treat software quality as an expense. Those participants may also treat quality as an issue that is raising the development costs and increasing development schedules. On the contrary, Jones summarizes the benefits of high quality: "However, from an analysis of about 13,000 software projects between 1973 and today, it is gratifying to observe that high quality levels are invariably associated with shorter-than-average development schedules and lower-than-average development costs"~\cite{jones2011economics}
 
  
  
