Added ISO descriptions for quality in use

--- a/quality/s_quality_general.tex
+++ b/quality/s_quality_general.tex
@@ -8,16 +8,18 @@ Quality is an attribute of the item in question. It is often described as a comb
 Besides being subjective, the word "quality" has many tones and thus it complicates defining quality and especially software quality. The word "quality" can describe affairs such as elegance or beauty, fitness of use, satisfaction of user requirements, freedom from defects, high reliability and ease of use among multiple others. These descriptions appear even more complicated considering that quality and the it's attributes are bound to not just the observer but also the operation context in question. While a software component can have excellent quality in some context it can still be even dangerous in other. The same applies in several attributes of quality. A component fit for some use can be defective in different context; what is satisfying the users requirements in one environment can be useless in others.~\cite{jones2011economics}
 
 % Softabisneksessäkin Subjektiivista
-TODO: In software business, quality has also multiple viewpoints. Quality has different meanings for vendors, customers, end-users etc. 
+TODO: Tämä kappale
+In software business, quality has also multiple viewpoints. Quality has different meanings for vendors, customers, end-users etc. 
 
 
 
 % http://ryreitsma.blogspot.fi/2011/07/software-has-new-quality-model-iso.html
 % Virallinen, ISO 25010: Functional suitability, Reliability, Operability, Performance efficiency, Security, Compatibility, Maintainability, Transferability
-TODO: Voiko viitata blogiin, jossa kiteytetään ISO 25010
+
  
+The official quality standard in software is defined in ISO 25010. It is brought up to date in 2011 from the ISO 9126 published in 1991. ISO 25010 introduces a quality model, which classifies software quality in a set of characteristics each having a number of sub-characteristics. In the descriptions of the quality model's characteristics, it is assumed that the operation context is known and predetermined. Functional suitability is the degree to which the product provides functions that meet stated and implied needs. Reliability is the degree to which the product can perform specified functions for a specific period of time. Operability is the degree to which the product has attributes that enable it to be understood, learned, used and attractive to the user. Performance efficiency is the amount of resources the product uses under certain conditions. Security is degree of protection of information and data from unauthorized persons or systems trying to read, modify or access them. Compatibility is the degree to which two or more systems or components can exchange information, including, but not limited to, performing their required functions while sharing the same hardware or software environment. Maintainability is the degree of effectiveness and efficiency with which the product can be modified.  Transferability is the degree to which a system or component can be effectively and efficiently transferred from one hardware, software or other environment to another.
 
-
+In addition to the quality model, the 25010 standard defines the model of software quality in use. This model consists of five main characteristics. Effectiveness is the accuracy and completeness with which users achieve specified goals. Efficiency is the amount of consumed resources in relation to accuracy and completeness with which users achieve goals. Satisfaction is the degree to which users are satisfied with the experience of using the product.Safety is the degree to which a product does not lead to a state in which life, health, property, or the environment is endangered. Usability is the extent to which product can be used by specified users to achieve specified goals with effectiveness, efficiency and satisfaction.~\cite{TODO: Voiko viitata blogiin, jossa kiteytetään ISO 25010}
 % Haikala s.48: toiminnan laatu vs tuotteen laatu
 
 % Haikala s.49 verification/validation 'tehdäänkö tuotetta oikein' ja 'tehdäänkö oikeaa tuotetta'
