Fixed typos etc. Moved motivation to the beginning of chapter

--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -92,8 +92,8 @@ olla joko \textit{.eps}- tai \textit{.pdf}-muodossa riippuen \LaTeX-versiosta.
  
 \begin{termiluettelo}
  
-\item [$\hbar$] Redusoitu Planckin vakio
-\item [SNR] Signaali-kohinasuhde (engl.: Signal to Noise Ratio)
+\item [Life cycle] TODO
+\item [Function point] TODO
  
 \end{termiluettelo} 
  
