--- a/quality/c_quality.tex
+++ b/quality/c_quality.tex
@@ -1,7 +1,7 @@
 
  \chapter{Software Quality}
  
-This chapter describes software quality and methods for improving quality in software projects. The first section describes the software quality in general and the motivation behind improving quality. In the second section the most popular active and passive methods used to improve quality, are introduced.
+This chapter describes software quality and methods for improving quality in software projects. The first section describes software quality in general and the motivation behind improving quality. In the second section the most popular active and passive methods for improving quality are introduced.
 
  \input{quality/s_quality_general}
  
