Added content to defect preventing

--- a/books.bib
+++ b/books.bib
@@ -14,3 +14,12 @@ url = {http://asq.org/glossary/q.html}
   year={2011},
   publisher={Addison-Wesley}
 }
+
+@ONLINE{atlassianAgileReview,
+author = {Wojciech Seliga},
+title = {Code Review in Agile Teams – part II},
+year = {2010},
+url = {https://blogs.atlassian.com/2010/03/code_review_in_agile_teams_part_ii/}
+}
+
+
