--- a/case/s_methods_processes.tex
+++ b/case/s_methods_processes.tex
@@ -6,6 +6,8 @@
  \item Käytetyt QA-metodit
  \item Kerrotaan prosessista ja tiimistä
  
+Static code analysis (IDEn vakiot), Communication ("embedded users"), Testing(frontend, backend unit testing and integration tests), occasional reviews (rarely)
+
  \end{itemize}
  
  \section{Achieved quality in the project}
