--- a/general/c_pretext.tex
+++ b/general/c_pretext.tex
@@ -89,7 +89,7 @@ olla joko \textit{.eps}- tai \textit{.pdf}-muodossa riippuen \LaTeX-versiosta.
 \newpage
 \chapter*{TERMS AND DEFINITIONS}
  
- 
+% Näitä ei välttämättä tarvi olla
 \begin{termiluettelo}
  
 \item [Life cycle] TODO
