--- a/qa_startup/s_evaluation.tex
+++ b/qa_startup/s_evaluation.tex
@@ -1,10 +1,31 @@
 
  \section{Evaluation of QA methods}
  
+MILLÄ MENESTYKSELLÄ TEHDÄÄN JA KUINKA SOPII TÄHÄN SCOPEEN
+
+
+
+PREVENTIVE
+-Small business applications p.126
+	-1000fp
+	-embedded users
+	-agile development method
+	-TDD
+	-automated risk analysis
+	-static analysis on all code segments
+	-This combination should lower defect potentials by 45\% and ensure defect removal 95\%
+
+
+
+
  \begin{itemize}
   
  \item ECO: We use these quality metrics to compare a number of quality improvement techniques at each stage of the software development life cycle and quantify their efficacy using data from real-world applications.
  
+ \item Direct costs & efforts p. 200 table
+
+ \item ECO: Analysis of pretest defect removal activities p. 208
+
  \end{itemize}
  
  \subsection{Methods in different phases of the life cycle}
@@ -21,3 +42,7 @@
  \item ECO: Cost per defect => paras tulos bugisimmassa projektissa
  
  \end{itemize}
+
+% ECO:  p. 127 harmful combinations PREVENTIVE
+
+Capers Jones has interpreted from the research of multiple years of software quality that there can be harmful combinations of methods used. Even when combinind harmful methods with helpful ones, the harmful method seem to end up winning. That is, defect potentials are raising instead of coming down. Some methods combined with others can raise the defect potentials and make applications risky with a change of failure.
