--- a/quality/ss_testing.tex
+++ b/quality/ss_testing.tex
@@ -6,5 +6,7 @@
  \item Crash, Smoke and Kattava testaus
  
  \item ECO: Chapter 5
+
+ \item ROI: Three main activities: Review, process audit and testing
  
  \end{itemize}
