--- a/quality/s_quality_general.tex
+++ b/quality/s_quality_general.tex
@@ -24,7 +24,7 @@ Jones expresses concerns towards the poor measurement of software quality causin
 \subsection{Software quality defined}
 
 % ECO: Chapter 1
-The word "quality" has many tones and thus it complicates defining quality and especially software quality. The word "quality" can be understood as elegance or beauty, fitness of use, satisfaction of user requirements, freedom from defects, high reliability, and ease of use, among multiple other things. These descriptions appear even more complicated considering that quality and its attributes are bound to not just the observer but also the operation context in question. While a software component can have excellent quality in some context it can still be even dangerous in others. The same applies in several attributes of quality. A component fit for some use can be defective in different contexts; what satisfies the users requirements in one environment can be useless in others.~\cite{jones2011economics}
+The word "quality" has many tones and thus it complicates defining quality and especially software quality. The word "quality" can be understood as elegance or beauty, fitness of use, satisfaction of user requirements, freedom from defects, high reliability, and ease of use, among multiple other things. These descriptions appear even more complicated considering that quality and its attributes are bound to not just the observer but also the operation context in question. While a software component can have excellent quality in some context it can still be even dangerous in others. The same applies in several attributes of quality. A component can be fit for some use, but defective in different contexts. Some component can satisfy the users requirements in one environment, but can be useless in others.~\cite{jones2011economics}
 
 % Softabisneksessäkin Subjektiivista
 TODO: Tämä kappale
@@ -45,8 +45,6 @@ In addition to the quality model, the 25010 standard defines the model of softwa
 
 % mittaus
 
-% http://ryreitsma.blogspot.fi/2011/07/software-has-new-quality-model-iso.html
-% Virallinen, ISO 25010: Functional suitability, Reliability, Operability, Performance efficiency, Security, Compatibility, Maintainability, Transferability
 
 % tavoitteena luoda arvoa asiakkaalle
 
