--- a/quality/s_quality_methods.tex
+++ b/quality/s_quality_methods.tex
@@ -1,22 +1,32 @@
 
  \section{Methods for improving quality}
  
- \begin{itemize}
- 
- \item ECO: pretest and tests
- 
- \item ECO: Chapter 3 preventing defects 
- 
- \item ROI: Three main activities: Review, process audit and testing
- 
- \end{itemize}
+Quality of a software product can be influenced throughout its life cycle with multiple approaches. Pursuing high quality means having methods in use for both decreasing the amount of defects and maintaining good structural quality. In addition to these technical approaches, projects should have methods to assure high quality of specification and implementation process.
 
-JAKO AKTIIVISET/PASSIIVISET??
+Methods for improving quality can be split into defect prevention methods, pretest methods, testing and post-release methods. Preventive and pretest methods contain actions such as reviews, inspections and audits. Testing includes various types of testing the functionality. Post-release methods focus on maintainability, defect discovery and defect repairing.
+
+A solid base for high quality is built with good specification, requirements and planning in the beginning of a project. When development begins, there should be ways to prevent as much defects as possible. As defects appear anyway, they should be detected and fixed as early as possible. Detecting the defects early lowers the effort needed to fix them. 
+
+The hardest defects to remove are found in the requirements and design because testing and static analysis cannot find them. This is because these defects tend to be deficiency of features and errors of logic rather than errors in code. These defects are usually situated in the beginning of the life-cycle and thus require great effort to be removed. 
+
+At some point, the project can initiate testing phase. Testing is used to systematically find defects in the software. Tests can be aimed to different areas of the software and the range of different tests used is dependent of the project. Big and critical projects should use comprehensive testing whereas smaller projects can get along with smaller amount of tests and lesser coverage.
+
+Quality cannot be forgotten when the software is released. Because defect removal efficiency can never reach 100\%, there are always defects after the release. Some of those defects may have been found in the previous phases, but not removed, and other defects were unknown to the project team at the time of the release. Quality methods after the release should include detecting and removing defects and increasing the design for increasing the maintainability. With this range of methods divided to the software life-cycle, every project should choose the most appropriate methods to be used in the project in question.
+
+
+
+ROI: Three main activities: Review, process audit and testing
+
+
+
+MITÄ TEHDÄÄN
+
+\input{quality/ss_preventing}
+
+\input{quality/ss_pretest}
  
 \input{quality/ss_testing}
+ 
+\input{quality/ss_post_release}
+ 
 
-\input{quality/ss_rev_insp_other}
- 
-\input{quality/ss_CI}
- 
-\input{quality/ss_lean}
