Added a subsection for life-cycle with quality

--- a/quality/s_quality_general.tex
+++ b/quality/s_quality_general.tex
@@ -38,7 +38,7 @@ In software business, quality has also multiple viewpoints. Quality has differen
  
 The official quality standard in software is defined in ISO 25010. It was brought up to date in 2011 from ISO 9126 published in 1991. ISO 25010 introduces a quality model which classifies software quality in a set of characteristics each having a number of sub-characteristics. In the descriptions of the quality model's characteristics, it is assumed that the operation context is known and predetermined. Functional suitability is the degree to which the product provides functions that meet stated and implied needs. Reliability is the degree to which the product can perform specified functions for a specific period of time. Operability is the degree to which the product has attributes that enable it to be understood, learned, used and attractive to the user. Performance efficiency is the amount of resources the product uses under certain conditions. Security is degree of protection of information and data from unauthorized persons or systems trying to read, modify or access them. Compatibility is the degree to which two or more systems or components can exchange information, including, but not limited to, performing their required functions while sharing the same hardware or software environment. Maintainability is the degree of effectiveness and efficiency with which the product can be modified.  Transferability is the degree to which a system or component can be effectively and efficiently transferred from one hardware, software or other environment to another.
 
-In addition to the quality model, the 25010 standard defines the model of software quality in use. This model consists of five main characteristics. Effectiveness is the accuracy and completeness with which users achieve specified goals. Efficiency is the amount of consumed resources in relation to accuracy and completeness with which users achieve goals. Satisfaction is the degree to which users are satisfied with the experience of using the product.Safety is the degree to which a product does not lead to a state in which life, health, property, or the environment is endangered. Usability is the extent to which product can be used by specified users to achieve specified goals with effectiveness, efficiency and satisfaction.~\cite{TODO: Voiko viitata blogiin, jossa kiteytetään ISO 25010}
+In addition to the quality model, the 25010 standard defines the model of software quality in use. This model consists of five main characteristics. Effectiveness is the accuracy and completeness with which users achieve specified goals. Efficiency is the amount of consumed resources in relation to accuracy and completeness with which users achieve goals. Satisfaction is the degree to which users are satisfied with the experience of using the product.Safety is the degree to which a product does not lead to a state in which life, health, property, or the environment is endangered. Usability is the extent to which product can be used by specified users to achieve specified goals with effectiveness, efficiency and satisfaction.~\cite{ISOBlog}
 % Haikala s.48: toiminnan laatu vs tuotteen laatu
 
 % Haikala s.49 verification/validation 'tehdäänkö tuotetta oikein' ja 'tehdäänkö oikeaa tuotetta'
