Notes for Lean Startup

--- a/qa_startup/s_startup.tex
+++ b/qa_startup/s_startup.tex
@@ -1,6 +1,26 @@
 
  \section{Startup}
+
+Startup is a term that became popular during the dotcom bubble, when a great number of companies were founded to do business on the Internet. Steve Blank lists some principles of a startup in his blog post "What’s A Startup? First Principles.". Blank defines a startup as "an organization formed to search for a repeatable and scalable business model". The first goal for a business model can be revenue, profits, users or click-throughs. The business model must be quickly and constantly tested and iterated by using Agile Development. Blank also tells that the business model of most startups is changed multiple times.~\cite{blank2010startup}
+
+ \subsection{Lean startup}
  
+Lean Startup is a movement pioneered by Eric Ries, which brings the principles of lean manufacturing to the context of entrepreneurship. Like the lean manufacturing is measuring progress also the lean startup measures its progress for discovering and eliminating the sources of waste. Lean manufacturing measures the progress by the production of high-quality goods, whereas in lean startup, the unit of progress in lean startup is something Ries calls validated learning.
+
+Ries' definition of a startup is "a human institution designed to create a new product or service under conditions of extreme uncertainty". This definition omits the size of the institution and thus implies that a startup can be ranging from an individual or a small group of people building their product in a garage to a team or division inside a large company. The most important aspect of the definition is the extreme uncertainty, which needs constant measurement and steering of the process.
+
+Lean Startup has got 5 principles. 
+
+ % 5 principles
+
+-Entrepeneurs are everywhere
+-Entrepreneurship is management
+-Validated learning
+-Build-Measure-Learn
+-Innovation accounting
+
+~\cite{ries2011lean}
+
  \subsection{Life cycle}
 
  \begin{itemize}
